# pyeed

./: .gitignore  404.html  BuildAndPopulateDB.ipynb  BuildAndPoulateDB.ipynb  LICENSE  README.md  index.html  logging.conf  mkdocs.yml  model_diagram.json  objects.inv  pyproject.toml  requirements.txt  seq.json  sitemap.xml  test.ipynb  test_nat_lang_queries.ipynb
.github/: Dockerfile
.github/scripts/: example.py
.github/workflows/: build_push_docker.yaml  generate_api.yaml  integration.yaml  integration.yml  lint.yaml  make_docs.yaml  release_pypi.yaml  tests.yaml
Testtest/: __init__.py
Testtest/core/: organism.py  proteinsequence.py
Testtest/schemes/: PyEED Data Model.md
api/clustalo/: index.html
api/dbconnect/: index.html
api/primarydbadapter/: index.html
api/pyeed/: index.html
dm_playground/: example.py
docker/: README.md  docker-compose.yml  readme.md  requirements.txt  supervisord.conf
docker/blast/: Dockerfile  app.py  reload_development.sh
docker/clustalo/: Dockerfile  app.py  run_commands.sh
docker/jupyterlab/: Dockerfile  startup-script.sh  update_packages.py
docker/mmseqs2/: Dockerfile  app.py  reload_development.sh
docker/my_neo4j/: Dockerfile
docker/neo4j_image/: Dockerfile  README.md
docs/: index.md
docs/api/: clustalo.md  dbconnect.md  primarydbadapter.md  pyeed.md
docs/examples/: alignment.ipynb  alignments.md  basics.ipynb  basics.md  ids.json  network.ipynb
docs/figs/: model_diagram.json
docs/installation/: docker.md  install_pyeed.md  pip.md  setup_local_blast.md  via_pip.md
docs/quick_start/: alignments.md  basics.md  blast.md  clustering.md  index.md  networks.md
docs/setup/: database.md  docker.md  jupyterlab.md
docs/usage/: alphafold.ipynb  basics.ipynb  blast.ipynb  blastp_search.ipynb  clustalo.ipynb  embedding_different_models.ipynb  embeddings_analysis.ipynb  ids.txt  initial_setup.ipynb  mapping_test_uniparc.json  mapping_test_uniprot.json  mmseqs.ipynb  mutation_analysis.ipynb  network_analysis.ipynb  standard_numbering.ipynb  uniprot_mapper.ipynb
docs/usecases/: usecase1.md
examples/: README.md  alignment.ipynb  basics.ipynb  blast_search.ipynb  docker-compose.yml  env.toml  environment_docker.md  fetcher_demo.py  hmm.ipynb  ids.json  network.ipynb  query_and_blast.ipynb  test.ipynb
examples/alignment/: index.html
examples/alignments/: Dockerfile  f1.fasta  output.clu  readme.md  test_clustal.ipynb  test_pairwise.ipynb
examples/basics/: docker-compose.yml  index.html  query_and_blast.ipynb
examples/blast/: Dockerfile
examples/clustering/: test_cluster.ipynb
examples/network/: index.html
examples/networks/: alignment_network.ipynb  tem109_accession.toml  tem1_accessions.toml  test.ipynb
graph-network/: gen.toml
graph-network/graph-network/: bert.ipynb  populate.ipynb
graph-network/json/: A0B742.json  A1RSD7.json  A2BIZ8.json  A3MY01.json  A4G0T1.json  A5UMW7.json  A6UQS6.json  A6UU75.json  A6VHQ4.json  A7I771.json  A8MD44.json  A9A923.json  B0R5A8.json  B1YC36.json  B6YUL1.json  C3MJ04.json  C3NF87.json  C5A4B7.json  MBP7070042.1.json  MBU7022768.1.json  MCD6512403.1.json  MCI2415466.1.json  MCL4350655.1.json  MCL4451275.1.json  NHV96297.1.json  NOZ59931.1.json  NPA53530.1.json  NQE45598.1.json  O27429.json  O30186.json  O59488.json  O67275.json  P0CW62.json  P0CW63.json  P0DF56.json  P26498.json  PLJ76955.1.json  Q12WC8.json  Q18H49.json  Q2FN14.json  (+26 more)
graph-network/ttl/: A0B742.ttl  A1RSD7.ttl  A2BIZ8.ttl  A3MY01.ttl  A4G0T1.ttl  A5UMW7.ttl  A6UQS6.ttl  (+59 more)
other-name/: __init__.py
pyEED/: __init__.py
pyeed/: __init__.py  dbconnect.py  embedding.py  gom.py  main.py  model.py  pyeed.py
quick_start/: index.html
search/: search_index.json
specifications/: alignment.md  data_model.md  datamodel_v2.md  model.md  old_data_model.md  sequence_record.md
tests/: conftest.py
(+1422 files in other folders)
