[tool.poetry]
name = "pyeed"
version = "0.3.6"
description = "Toolkit to create, annotate, and analyze sequence data"
authors = ["haeussma <83341109+haeussma@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyeed" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
biopython = "^1.81"
networkx = "^3.2.1"
plotly = "^5.18.0"
nbformat = "^5.9.2"
scipy = "^1.11.3"
pyhmmer = "^0.10.11"
httpx = "^0.27.0"
nest-asyncio = "^1.6.0"
rich = "^13.0.0"
aiometer = "^0.5.0"
joblib = "^1.4.0"
requests = "^2.31.0"
sdrdm = { git = "https://github.com/JR-1991/software-driven-rdm.git" }
matplotlib = "^3.9.0"
pymsaviz = "^0.4.2"
py4cytoscape = "^1.9.0"
tenacity = "^8.3.0"
neo4j = "^5.20.0"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.9"
pytest = "^8.0.1"
python-dotenv = "^1.0.1"
pytest-mock = "^3.12.0"
ruff = "^0.4.1"
mkdocs-jupyter = "^0.24.7"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "^7.1.3"
ipython = "^8.24.0"
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
