[tool.poetry]
name = "pyeed"
version = "0.4.1"
description = "Toolkit to create, annotate, and analyze sequence data"
authors = ["haeussma <83341109+haeussma@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyeed",  from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
biopython = ">=1.81,<1.84"
networkx = "^3.2.1"
plotly = "^5.18.0"
scipy = "^1.11.3"
pyhmmer = "^0.10.11"
httpx = "^0.27.0"
nest-asyncio = "^1.6.0"
rich = "^13.0.0"
aiometer = "^0.5.0"
joblib = "^1.4.0"
requests = "^2.31.0"
matplotlib = "^3.9.0"
pymsaviz = "^0.4.2"
tenacity = "^8.3.0"
neo4j = "5.19.*"
bio = "^1.7.1"
loguru = "^0.7.2"
neomodel = "^5.3.3"
shapely = "^2.0.6"
torch = "^2.4.1"
transformers = "^4.45.2"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
openai = "^1.52.2"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.9"
pytest = "^8.0.1"
python-dotenv = "^1.0.1"
pytest-mock = "^3.12.0"
ruff = "^0.4.1"
mkdocs-jupyter = "^0.24.7"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "^6"
pytest-loguru = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
